
2007-12-20  Tinne De Laet <first dot last at mech dot kuleuven dot be>
	* According to bug # 471, I made the interpretation of dimension unique
	* src/pdf/...: added a class variable _num_states to the discrete pdfs to
	represent the number of discrete states 
	* tests/...: adapted according to changes in pdf
	* examples/...: adapted according to changes in pdf

2007-12-20  Tinne De Laet <first dot last at mech dot kuleuven dot be>
	* src/pdf/uniform.*/: added class for uniform distribution
	* tests/pdf_test.*: added tests to test new class

2007-12-20  Tinne De Laet <first dot last at mech dot kuleuven dot be>
	* src/rng/rng.*/: added method to sample from uniform distribution with
	lower and upper border given

2007-08-10  Tinne De Laet <first dot last at mech dot kuleuven dot be>
	* tests/matrixwrapper_test.cpp: some extra tests added according to bug#441
	and existing test made more thoroughly

2007-05-25  Tinne De Laet <first dot last at mech dot kuleuven dot be>
	* Singular value decomposition and pseudoinverse added to the matrix wrapper
	(revision 28197)

2007-05-21  Tinne De Laet <first dot last at mech dot kuleuven dot be>
	* Smoother example included (and thoroughly tested ofcourse)

2007-05-11  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* Scythe support re-activated

2007-05-10  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* add extensive testing for matrix/vector wrapper

2007-05-10  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* add first support for boost matrix/vector library

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* move experimental branch to new trunk location in orocos repository

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* update documentation for new build system. see bfl/docs/installation_guide.tex

2007-05-03  Wim Meeussen <first dot last at mech dot kuleuven dot be>
	* Finished porting BFL to cmake build system
