@@ -1,7 +1,7 @@
 GLOBAL_ADD_INCLUDE_DIR( ${CMAKE_SOURCE_DIR}/src/filter )
 GLOBAL_ADD_INCLUDE( bfl/filter filter.h filter.cpp  particlefilter.h particlefilter.cpp bootstrapfilter.h bootstrapfilter.cpp
                         asirfilter.h asirfilter.cpp kalmanfilter.h extendedkalmanfilter.h iteratedextendedkalmanfilter.h
-                        EKparticlefilter.h SRiteratedextendedkalmanfilter.h innovationCheck.h)
+                        EKparticlefilter.h SRiteratedextendedkalmanfilter.h innovationCheck.h histogramfilter.h)
 GLOBAL_ADD_SRC (filter/iteratedextendedkalmanfilter.cpp filter/kalmanfilter.cpp filter/extendedkalmanfilter.cpp
-                filter/EKparticlefilter.cpp filter/SRiteratedextendedkalmanfilter.cpp filter/innovationCheck.cpp)
+                filter/EKparticlefilter.cpp filter/SRiteratedextendedkalmanfilter.cpp filter/innovationCheck.cpp filter/histogramfilter.cpp)
 
