@@ -28,7 +28,8 @@ IF (BUILD_TESTS)
   ADD_TEST( test_smoother test_smoother )
 
   ADD_EXECUTABLE( test_complete_filter ${DO_EXCLUDE} test-runner.cpp approxEqual.cpp complete_filter_test.cpp complete_filter_test.hpp
-                  ${PROJ_SOURCE_DIR}/examples/mobile_robot.cpp ${PROJ_SOURCE_DIR}/examples/compare_filters/nonlinearanalyticconditionalgaussianmobile.cpp)
+                  ${PROJ_SOURCE_DIR}/examples/mobile_robot.cpp ${PROJ_SOURCE_DIR}/examples/compare_filters/nonlinearanalyticconditionalgaussianmobile.cpp
+                  ${PROJ_SOURCE_DIR}/examples/discrete_filter/conditionaluniformpdf.cpp )
   TARGET_LINK_LIBRARIES( test_complete_filter orocos-bfl ${MATRIX_LIBS} ${RNG_LIBS} ${GINAC_LIBS} cppunit )
   ADD_TEST( test_complete_filter test_complete_filter )
 
