@@ -1,5 +1,11 @@
 
 2007-12-20  Tinne De Laet <first dot last at mech dot kuleuven dot be>
+	* Related to enhancement described in bug #472
+	* src/filter/histogramfilter.*/: added class for histogram filter 
+	* tests/complete_filter_test.*: added tests to test new class
+	* examples/discrete_filter/*: added example of histogram filter
+
+2007-12-20  Tinne De Laet <first dot last at mech dot kuleuven dot be>
 	* According to bug # 471, I made the interpretation of dimension unique
 	* src/pdf/...: added a class variable _num_states to the discrete pdfs to
 	represent the number of discrete states 
